# 3d-global-news

./: .env.example  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  PROJECT_PROPOSAL.md  README.md  docker-compose.yml  init.sql  package-lock.json  package.json  plan.md  start-local.sh  start.sh
apis/: api.json
apis/gnews/: top_headlines_endpoint.md
apis/newsdata/: example.md
apis/world_news/: tutorial.md
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  db.rs  lib.rs  main.rs
backend/src/api/: categories.rs  handlers.rs  mod.rs  news.rs  routes.rs
backend/src/models/: mod.rs
backend/src/services/: database.rs  fetcher.rs  mod.rs  worldnews.rs
client/: index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/hooks/: useGlobe.ts  useNews.ts
client/src/services/: api.ts
client/src/stores/: newsStore.ts
client/src/types/: globe.gl.d.ts  news.ts
client/src/utils/: geo.ts
docx/: PROJECT_PROPOSAL.md  前端.md
docx/plans/: PLAN_v1.md  PLAN_v2.md
docx/生产报告/: 报告_20260331_165204.md  报告_20260331_165550.md  模块状态.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  countries.ts  style.css
frontend/src/api/: index.ts
frontend/src/modules/: DataLayer.ts  EarthScene.ts  GeoLayer.ts  InteractionManager.ts  ParticleEarth.ts  index.ts  useGlobe.ts
frontend/src/stores/: newsStore.ts
frontend/tests/: setup.ts
frontend/tests/modules/: EarthScene.test.ts  GeoLayer.test.ts  ParticleEarth.test.ts
nginx/: nginx.conf
scripts/: build.sh  deploy.sh  dev.sh  generate_report.sh  init.sh
server/: package.json
server/src/: index.ts  seed.ts
server/src/config/: index.ts
server/src/controllers/: newsController.ts
server/src/prisma/: schema.prisma
server/src/types/: index.ts
(+16 files in other folders)
