[package]
name = "globe-news-backend"
version = "0.1.0"
edition = "2021"
description = "GlobeNews Backend API"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = "3"
utoipa-swagger-ui = "3"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
