[package]
name = "globe-news-api"
version = "0.1.0"
edition = "2021"
description = "GlobeNews Backend API"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI / Swagger
utoipa = "3"
utoipa-swagger-ui = "3"

# Logging
env_logger = "0.11"
log = "0.4"

# HTTP client for news API calls
reqwest = { version = "0.11", features = ["json"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
