[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
worldnewsapi = { path = "./worldnewsapi" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
dotenvy = "0.15"
log = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
